--- a/app/frontend/src/components/Example/Example.module.css
+++ b/app/frontend/src/components/Example/Example.module.css
@@ -10,7 +10,7 @@
 
 .example {
     word-break: break-word;
-    background: #dbdbdb;
+    background: #f6f4f4;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
@@ -23,12 +23,12 @@
     box-shadow:
         0px 8px 16px rgba(0, 0, 0, 0.14),
         0px 0px 2px rgba(0, 0, 0, 0.12);
-    outline: 2px solid rgba(115, 118, 225, 1);
+    outline: 2px solid rgb(129, 175, 41);
 }
 
 .exampleText {
     margin: 0;
-    font-size: 22px;
+    font-size: 18px;
     width: 280px;
     height: 100px;
 }
