--- a/app/frontend/src/index.css
+++ b/app/frontend/src/index.css
@@ -10,10 +10,10 @@ body {
 }
 
 html {
-    background: #f2f2f2;
+    background: #ffffff;
 
     font-family:
-        "Segoe UI",
+        "Roboto",
         -apple-system,
         BlinkMacSystemFont,
         "Roboto",
