--- a/app/frontend/src/pages/chat/Chat.module.css
+++ b/app/frontend/src/pages/chat/Chat.module.css
@@ -5,6 +5,7 @@
     margin-top: 20px;
 }
 
+
 .chatRoot {
     flex: 1;
     display: flex;
@@ -19,13 +20,10 @@
 }
 
 .chatEmptyState {
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-height: 1024px;
-    padding-top: 60px;
 }
 
 .chatEmptyStateTitle {
@@ -36,6 +34,7 @@
 }
 
 .chatEmptyStateSubtitle {
+    margin-top: 40px;
     font-weight: 600;
     margin-bottom: 10px;
 }
@@ -67,7 +66,7 @@
     margin-bottom: 20px;
     max-width: 80%;
     display: flex;
-    min-width: 500px;
+    /*min-width: 500px;*/
 }
 
 .chatMessageGptMinWidth {
@@ -85,15 +84,13 @@
     padding-right: 24px;
     width: 100%;
     max-width: 1028px;
-    background: #f2f2f2;
+    background: #ffffff;
 }
 
 .chatAnalysisPanel {
     flex: 1;
     overflow-y: auto;
     max-height: 89vh;
-    margin-left: 20px;
-    margin-right: 20px;
 }
 
 .chatSettingsSeparator {
