--- a/app/frontend/src/pages/layout/Layout.module.css
+++ b/app/frontend/src/pages/layout/Layout.module.css
@@ -5,28 +5,29 @@
 }
 
 .header {
-    background-color: #222222;
-    color: #f2f2f2;
+    background-color: #ffffff;
+    color: #686868;
+    border-bottom:4px solid linear-gradient(to right, #ccc, #095484, #ccc);
 }
 
 .headerContainer {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-right: 12px;
-    margin-left: 12px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
 }
 
 .headerTitleContainer {
     display: flex;
     align-items: center;
     margin-right: 40px;
-    color: #f2f2f2;
+    color: #686868;
     text-decoration: none;
+    border-bottom:4px solid linear-gradient(to right, #ccc, #095484, #ccc);
 }
 
 .headerLogo {
-    height: 40px;
+    height: 80px;
 }
 
 .headerTitle {
@@ -41,7 +42,7 @@
 }
 
 .headerNavPageLink {
-    color: #f2f2f2;
+    color: #686868;
     text-decoration: none;
     opacity: 0.75;
 
@@ -55,7 +56,7 @@
 }
 
 .headerNavPageLinkActive {
-    color: #f2f2f2;
+    color: #686868;
     text-decoration: none;
 }
 
@@ -65,7 +66,6 @@
 
 .headerRightText {
     font-weight: normal;
-    margin-left: 40px;
 }
 
 .microsoftLogo {
@@ -74,5 +74,5 @@
 }
 
 .githubLogo {
-    height: 20px;
+    height: 80px;
 }
